--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+  <data>
          <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Add Tributes to Product</field>
             <field name="model">product.template</field>
@@ -86,32 +87,5 @@
 
            </field>
        </record>
-        <!-- ............... HERENCIA VISTA EN TREE ...............
-        <record model="ir.ui.view" id="sii_barcode_tree">
-            <field name="name">sii.barcode.tree</field>
-            <field name="model">stock.picking</field>
-            <field name="inherit_id" ref="stock.vpicktree"/>
-            <field name="arch" type="xml">
-              <field name="state" position="after">
-                  <field name="picking_checked" />
-              </field>
-            </field>
-        </record>
-
--->
-<!--
-        <record model="ir.ui.view" id="sii_barcode_tree_move">
-            <field name="name">sii.barcode.tree.move</field>
-            <field name="model">stock.move</field>
-            <field name="inherit_id" ref="stock.vpicktree"/>
-            <field name="arch" type="xml">
-                <field name="state" position="after">
-                    <field name="bool_barcode" />
-                </field>
-            </field>
-        </record>
-
-      -->
-
-
+     </data>
 </odoo>
