--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <odoo>
-      <!--
+      <data>
        <record id="barcode_scanning_inventory" model="ir.ui.view">
           <field name="name">Add Tributes to Product</field>
           <field name="model">product.template</field>
@@ -11,8 +11,8 @@
                   <field name="default_color"/>
               </field>
           </field>
-
       </record>
+
         <record id="stock_picking_barcode_form" model="ir.ui.view" >
             <field name="name">Barcode reception</field>
             <field name="model">stock.picking</field>
@@ -56,7 +56,7 @@
                 </notebook>
             </field>
         </record>
-
+<!--
         <record id="quant_Values_inventory_barcode_scanning" model="ir.ui.view">
            <field name="name">Add functions to quant</field>
            <field name="model">stock.quant</field>
@@ -89,4 +89,5 @@
            </field>
          </record>
        -->
+     </data>
 </odoo>
