--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -77,7 +77,7 @@
 
            </field>
          </record>
-         <record id="quant_Values_inventory_barcode_scanning" model="ir.ui.view">
+         <record id="values_in_stock_quant" model="ir.ui.view">
             <field name="name">Add functions to quant</field>
             <field name="model">stock.quant</field>
             <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
