--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -62,17 +62,16 @@
            <field name="inherit_id" ref="stock.view_inventory_form"/>
            <field name="arch" type="xml">
                <field name="line_ids" position="before">
+                 <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
+                     <field name="log_scanner"/>
+                 </div>
                    <h2>
                        <field name="inventory_barcode" placeholder="Codigo de barras"/>
                    </h2>
                 </field>
-                <field name="line_ids" position="after">
-                   <div class="center-align" style="margin-top: 20px; margin-left: 10px; margin-bottom: 10px;">
-                     <button type="object" string="Grabar" name="generate_inventory_lines" class="oe_highlight"/>
-                   </div>
-                   <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
-                       <field name="log_scanner"/>
-                   </div>
+                <field name="product_id" position="after">
+                   <field name="talla"/>
+                   <field name="color"/>
                </field>
 
            </field>
@@ -83,8 +82,8 @@
             <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
             <field name="arch" type="xml">
               <field name="product_id" position="before">
-                <field name="talla"/>
-                <field name="color"/>
+                <field name="talla" readonly="1"/>
+                <field name="color" readonly="1"/>
               </field>
              </field>
            </record>
