--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -61,10 +61,10 @@
            <field name="model">stock.inventory</field>
            <field name="inherit_id" ref="stock.view_inventory_form"/>
            <field name="arch" type="xml">
-             <field name="product_id" position="before">
-                <field name="talla"/>
-                <field name="color"/>
-            </field>
+             <xpath expr="//field[@name='line_ids']/tree/field[@name='product_id']" position="after">
+               <field name="talla" readonly="1"/>
+               <field name="color" readonly="1"/>
+             </xpath>
                <field name="line_ids" position="before">
                  <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
                      <field name="log_scanner"/>
