--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -62,7 +62,7 @@
            <field name="inherit_id" ref="stock.view_inventory_form"/>
            <field name="arch" type="xml">
              <xpath expr="//field[@name='line_ids']/tree/field[@name='product_id']" position="after">
-               <field name="new_ref" redadonly="1"/>
+               <field name="default_code" redadonly="1"/>
                <field name="talla" readonly="1"/>
                <field name="color" readonly="1"/>
              </xpath>
