--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -63,6 +63,7 @@
            <field name="arch" type="xml">
              <xpath expr="//field[@name='line_ids']/tree/field[@name='product_id']" position="after">
                <field name="product_code" readonly="1"/>
+               <field name="old_ref" readonly="1"/>
                <field name="talla" readonly="1"/>
                <field name="color" readonly="1"/>
              </xpath>
