--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -20,7 +20,7 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
               <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="before">
-                  <field name="barcode"/>
+                  <field name="default_code"/>
               </xpath>
               <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="after">
                 <field name="talla" readonly="1"/>
