--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -75,5 +75,16 @@
                 </field>
            </field>
          </record>
+         <record id="gabosoft_product_tree_view" model="ir.ui.view">
+             <field name="name">gabosoft.product.product.tree</field>
+             <field name="model">product.product</field>
+             <field name="inherit_id" ref="product.product_product_tree_view"/>
+             <field name="arch" type="xml">
+               <field name="name" position="after">
+                 <field name="default_talla"/>
+                 <field name="default_color"/>
+              </field>
+             </field>
+         </record>
      </data>
 </odoo>
