--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -88,7 +88,7 @@
          </record>
           <record id="add_defaultcode_moves" model="ir.ui.view">
            <field name="name">Add field defaultcode into stock_moves</field>
-           <field name="model">stock.move</field>
+           <field name="model">stock.move.line</field>
            <field name="inherit_id" ref="stock.view_move_tree"/>
            <field name="arch" type="xml">
                <field name="product_id" position="before">
