--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -91,9 +91,9 @@
            <field name="model">stock.move.line</field>
            <field name="inherit_id" ref="stock.view_move_line_tree"/>
            <field name="arch" type="xml">
-               <field name="product_id" position="before">
+               <xpath expr="//tree/field[@name='product_id']" position="before">
                  <field name="default_code" />
-                </field>
+                </xpath>
            </field>
          </record>
      </data>
